[package]
authors = ["Dusk Banks <me@bb010g.com>"]
categories = ["encoding", "no-std"]
description = "Human-friendly HSL (revision 4)"
edition = "2018"
exclude = ["*.nix", ".github", "/nix", "flake.lock"]
keywords = ["color", "husl", "hsl", "luv", "rgb"]
license = "MIT"
name = "hsluv"
readme = "README.md"
repository = "https://github.com/bb010g/rust-hsluv.git"
version = "0.3.1"

[package.metadata.docs.rs]
features = ["std"]

[dependencies]
num-traits = { version = "0.2.14", default-features = false }

[build-dependencies]
json = "0.11.13"

[features]
alloc = []
default = ["std"]
libm = ["num-traits/libm"]
std = ["alloc", "num-traits/std"]

[lib]
